# bazostokenizer

./: .gitignore  bazosapi.py  pyproject.toml  worker.py
app/: __init__.py
app/api/v1/: __init__.py  info.py  interactor.py  onlinesim.py
app/config/: __init__.py
app/db/: __init__.py  connection.py  tables.py  tickets.py
app/types/: ticket.py
bot/: config.py  description.md  main.py  migrate.py  watcher.py
bot/modules/: commands.py  db.py  ticket_integration.py  types.py
