[tool.poetry]
name = "bazostokenizer"
version = "0.1.0"
description = "API to get tokens from bazos with number registration"
authors = ["Akulij <aakulij@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = {extras = ["all"], version = "^0.88.0"}
aiohttp = "^3.8.3"
sqlmodel = "^0.0.8"
aiosqlite = "^0.17.0"
aiogram = "^2.23.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
